# rust_diary

./: .gitignore  Cargo.toml  README.md
src/: app.rs  main.rs  ui.rs
