[package]
name = "rust_diary"
version = "0.1.0"
edition = "2021"
authors = ["Sergio Rubio srubio@jabawaka.com"]
publish = false

[dependencies]
eframe = { version = "0.31", features = ["persistence"] }
serde = { version = "1", features = ["derive"] }
time = { version = "0.3.37", features = ["local-offset", "formatting", "serde"] }
serde_json = "1.0.134"
